--- a/favorites.html
+++ b/favorites.html
@@ -14,7 +14,7 @@
           <li><a href="schedule.html">Schedule</a></li>
             </ul>
         </nav>
-      <H1> My Favorites </H1>
+      <H1> My Favoritesss </H1>
       <h2> Favorite Foods </h2>
        <ol>
          <li> Cake </li>
