--- a/Index.html
+++ b/Index.html
@@ -1,108 +1,104 @@
 <HTML>
-  <HEAD>
+
+<HEAD>
     <TITLE>My First Web Page</TITLE>
     <link rel="stylesheet" href="styles.css">
-          <script src="script.js"></script>
-  </HEAD>
-  <BODY>
+    <script src="script.js"></script>
+</HEAD>
+
+<BODY>
     <H1> SIZI RIOS </H1>
-       <nav class="menu">
-        <ul>
-          <li><a href="Index.html">Home</a></li>
-          <li><a href="background.html">Background</a></li>
-          <li><a href="Interests.html">Interests</a></li>
-          <li><a href="favorites.html">Favorites</a></li>
-          <li><a href="schedule.html">Schedule</a></li>
-            </ul>
-        </nav>
+
+
     <H2> Personality </H2>
     <p> I am curious.
-      <H2>Interesting Facts</H2>
-      <p>I am addicted to  The Office.
-        <H2> Personal/Academic Goals</H2>
-        <p>I am taking rigorous courses currently and one college credit class, I would like to have a GPA of 4.0 or higher. I want to learn more about mock trial and the roles people have in real court order cases. I want to  <p>
-    <H2> Hobbies </H2>
-    <ul>
-      <li> The Office </li>
-      <li> Singing </li>
-      <li> Reading </li>
-      <li> Drums </li>
-    </ul>
-    <H2> My Family </H2>
+        <H2>Interesting Facts</H2>
+        <p>I am addicted to The Office.
+            <H2> Personal/Academic Goals</H2>
+            <p>I am taking rigorous courses currently and one college credit class, I would like to have a GPA of 4.0 or higher. I want to learn more about mock trial and the roles people have in real court order cases. </p>
+            <H2> Hobbies </H2>
+            <ul>
+                <li> The Office </li>
+                <li> Singing </li>
+                <li> Reading </li>
+                <li> Drums </li>
+            </ul>
+            <H2> My Family </H2>
 
-     <dl>
-    <dt> Misael Rios </dt>
-      <dd> He is my father, he is 37 years old </dd>
-      <dt> Magdalena De Leon</dt>
-      <dd> She is my mother, she is 38 years old. I love her a lot.</dd>
-        <dt> Dylan Rios </dt>
-      <dd> Dylan is my brother he is 8 years old. He loves dancing.</dd>
-          <dt> Gael Rios </dt>
-    <dd> Gael is the youngest sibling he is 7 years old. He loves to read. </dd>
-    </dl>
-    <p> ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// </p>
-  <H2>  Top Five Movies </H2>
-      <ol>
-        <li>Malifecent </li>
-        <li>Fireproof </li>
-        <li> Casper </li>
-        <li> The Spy </li>
-        <li> Sharkboy and Lavagirl </li>
-    </ol>
-    <p> ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// </p>
-   <H2> Music </H2>
-    <ol>
-      <li> River Flows in You </li>
-      <li> Its Always You </li>
-      <li> Trust Me - Bhad Bhabie </li>
-      <li> No Fun </li>
-      <li> Lofi HipHop </li>
-    </ol>
-    <p> ////////////////////////////////////////////////////////////////////////////////////////////////////////////////// </p>
-    <H2> Books </H2>
-    <ol>
-      <li> Grimm's Complete Fairy Tales </li>
-      <li> A Beautiful Composition of Broken </li>
-      <li> Whiskey Words & A Shovel </li>
-      <li> Island of the Blue Dolphins </li>
-      <li> The Sun and Her Flowers </li>
-    </ol>
-
-
-   <p>  /////////////////////////////////////////////////////////////////////////////////////////////////// </p>
-    <H2> My Favorite Quote/Script </H2>
-      <blockquote>
-        <p> (Taylor Lautner) "Close your eyes / Shut your mouth / Dream a dream / And Get us out / Dream, Dream, Dream, Dream, Dream, Dream / Hit the hay / Fast asleep / Dream a dream / You little bleep / Dream, Dream, Dream, Dream, Dream, Dream --"
-(Taylor Lautner) "Close your eyes, shut your mouth, dream a dream and get us out. / Dream, dream, dream, dream, dream, dream. / Hit the hay, fast asleep, dream a dream, you little blip. / Dream, dream, dream, dream, dream, dream."</p>
-<p> (Lavagirl) "It's working. Keep it up, Sharkboy."
-(Taylor Lautner) "Just relax, lay about, or my fist will put you out. / Dream, dream, dream, dream, dream, dream. / Take your time, but beware, there's darkness in the air. / Dream, dream, dream, dream, dream, dream." </p>
-<p> (Lavagirl) "Dream about me next, Max. I need to know who I am. Not just destruction or a simple flame. Dream of me as something good."
-(Taylor Lautner) "Don't despair, step right up. Glass of water? Here's a cup. / Dream, dream, dream, dream, dream, dream." </p>
-<p> (Lavagirl) "He's having a nightmare. Wake up, Max. Wake up. Stop that racket Sharkboy; you're giving him nightmares." </p>
+            <dl>
+                <dt> Misael Rios </dt>
+                <dd> He is my father, he is 37 years old </dd>
+                <dt> Magdalena De Leon</dt>
+                <dd> She is my mother, she is 38 years old. I love her a lot.</dd>
+                <dt> Dylan Rios </dt>
+                <dd> Dylan is my brother he is 8 years old. He loves dancing.</dd>
+                <dt> Gael Rios </dt>
+                <dd> Gael is the youngest sibling he is 7 years old. He loves to read. </dd>
+            </dl>
+            <p> ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// </p>
+            <H2> Top Five Movies </H2>
+            <ol>
+                <li>Malifecent </li>
+                <li>Fireproof </li>
+                <li> Casper </li>
+                <li> The Spy </li>
+                <li> Sharkboy and Lavagirl </li>
+            </ol>
+            <p> ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// </p>
+            <H2> Music </H2>
+            <ol>
+                <li> River Flows in You </li>
+                <li> Its Always You </li>
+                <li> Trust Me - Bhad Bhabie </li>
+                <li> No Fun </li>
+                <li> Lofi HipHop </li>
+            </ol>
+            <p> ////////////////////////////////////////////////////////////////////////////////////////////////////////////////// </p>
+            <H2> Books </H2>
+            <ol>
+                <li> Grimm's Complete Fairy Tales </li>
+                <li> A Beautiful Composition of Broken </li>
+                <li> Whiskey Words & A Shovel </li>
+                <li> Island of the Blue Dolphins </li>
+                <li> The Sun and Her Flowers </li>
+            </ol>
 
 
-<p> (Taylor Lautner) "You still hungry, Max? How about a knuckle sandwich?"
-(Lavagirl) "Thanks for saving me, Sharkboy."
-(Taylor Lautner) "Ouch."
-(Lavagirl) "When you dreamt up these giant cookies, who did you expect to be able to eat them?"
-(Max) "I really didn't think about it."
-(Lavagirl) "'Cause if you dream giant cookies, something has to be created to consume giant cookies."
-  (Taylor Lautner) "Cookie giants."</p>
-    </blockquote>
-    <H2> Schedule </H2>
-    <ol>
-      <li> AP English </li>
-      <li> AP US History </li>
-      <li> AP Computer Science </li>
-      <li> Algebra 2 </li>
-      <li> AVID 11 </li>
-      <li> Physics CP </li>
-      <li> French 2 </li>
-        </ol>
-    <img src= https://ih0.redbubble.net/image.309854053.5610/flat,550x550,075,f.u1.jpg </img>
+            <p> /////////////////////////////////////////////////////////////////////////////////////////////////// </p>
+            <H2> My Favorite Quote/Script </H2>
+            <blockquote>
+                <p> (Taylor Lautner) "Close your eyes / Shut your mouth / Dream a dream / And Get us out / Dream, Dream, Dream, Dream, Dream, Dream / Hit the hay / Fast asleep / Dream a dream / You little bleep / Dream, Dream, Dream, Dream, Dream, Dream --"
+                    (Taylor Lautner) "Close your eyes, shut your mouth, dream a dream and get us out. / Dream, dream, dream, dream, dream, dream. / Hit the hay, fast asleep, dream a dream, you little blip. / Dream, dream, dream, dream, dream, dream."</p>
+                <p> (Lavagirl) "It's working. Keep it up, Sharkboy."
+                    (Taylor Lautner) "Just relax, lay about, or my fist will put you out. / Dream, dream, dream, dream, dream, dream. / Take your time, but beware, there's darkness in the air. / Dream, dream, dream, dream, dream, dream." </p>
+                <p> (Lavagirl) "Dream about me next, Max. I need to know who I am. Not just destruction or a simple flame. Dream of me as something good."
+                    (Taylor Lautner) "Don't despair, step right up. Glass of water? Here's a cup. / Dream, dream, dream, dream, dream, dream." </p>
+                <p> (Lavagirl) "He's having a nightmare. Wake up, Max. Wake up. Stop that racket Sharkboy; you're giving him nightmares." </p>
+
+
+                <p> (Taylor Lautner) "You still hungry, Max? How about a knuckle sandwich?"
+                    (Lavagirl) "Thanks for saving me, Sharkboy."
+                    (Taylor Lautner) "Ouch."
+                    (Lavagirl) "When you dreamt up these giant cookies, who did you expect to be able to eat them?"
+                    (Max) "I really didn't think about it."
+                    (Lavagirl) "'Cause if you dream giant cookies, something has to be created to consume giant cookies."
+                    (Taylor Lautner) "Cookie giants."</p>
+            </blockquote>
+            <H2> Schedule </H2>
+            <ol>
+                <li> AP English </li>
+                <li> AP US History </li>
+                <li> AP Computer Science </li>
+                <li> Algebra 2 </li>
+                <li> AVID 11 </li>
+                <li> Physics CP </li>
+                <li> French 2 </li>
+            </ol>
+            <img src="https://ih0.redbubble.net/image.309854053.5610/flat,550x550,075,f.u1.jpg">
+
+
+</BODY>
 
 
 
-
-
-          </HTML>
+</HTML>
