--- a/Interests.html
+++ b/Interests.html
@@ -1,42 +1,48 @@
 <HTML>
-  <HEAD>
+
+<HEAD>
     <TITLE>background.html</TITLE>
     <link rel="stylesheet" href="styles.css">
-          <script src="script.js"></script>
-    <Body>
-      <nav class="menu">
+</HEAD>
+
+<Body>
+    <nav class="menu">
         <ul>
-          <li><a href="Index.html">Home</a></li>
-          <li><a href="background.html">Background</a></li>
-          <li><a href="Interests.html">Interests</a></li>
-          <li><a href="favorites.html">Favorites</a></li>
-          <li><a href="schedule.html">Schedule</a></li>
-            </ul>
-        </nav>
-            <H1> Interests </H1>
+            <li><a href="index2.html">Home</a></li>
+            <li><a href="background.html">Background</a>:My Background and My Family</li>
+            <li><a href="Interests.html">Interests</a>:A few things that interest me</li>
+            <li><a href="favorites.html">Favorites</a>:My favorite things </li>
+            <li><a href="schedule.html">Schedule</a>:My Schedule </li>
+        </ul>
+    </nav>
+    <H1> Interests </H1>
 
-            <h2> Hobbies </h2>
-                    <ul>
-                        <li> Singing </li>
-                                <p> I started singing when I was
+    <h2> Hobbies </h2>
+    <ul>
+        <li> Singing </li>
+        <p> I started singing when I was
             10 years old. I joined a band at my local church and that's when I knew I wanted to be a singer. I've been singing since I was a little girl but I never really experienced a deep feeling for it until I joined my band! </p>
-                            <img src=           "https://ak2.picdn.net/shutterstock/videos/33778132/thumb/1.jpg"
-               </img>
-
-                            <li> Drumming </li>
-                                    <p> I started drumming when I was 12. I began to learn because there would be times when the drummer in our band couldn't make it so I began to learn and my cousin taught me. I love drumming it helps me relieve stress and gets me really HYPE! </p>
-                        <img src="http://s3.amazonaws.com/pics.fandalism.com/267x267-EE003AF6-C8D3-4F17-9B4A742CAAADF582.jpg" </img>
-                            <li> Photography </li>
-                                    <p> I've always liked taking photos but I never really considered photography until I got my first camera. I have a Canon 6D that I bought myself 2 years ago and ever since i've always had an interest in photography. I like taking pictures of a variety of things whether it be people, places, or food. I mostly enjoy taking pictures of people and capturing moments. </p>
-                            <img src= "https://i.ytimg.com/vi/lzwu33UrV0U/maxresdefault.jpg" </img>
-          <H2>Sports <h2>
-            <ol>
-              <li> Swimming </li>
-                    <p> I started swimming my freshmen year in High School. At first it was very hard but I practiced everyday and eventually became really fast and I could hold my breath longer underwater. I swim often but not as much as I used to due to an allergic reaction I had to the chlorine in the water but hopefully in time I will swim again. My goal is to learn all the different strokes! </p>
-          </ul>
-              <img src= "https://ak9.picdn.net/shutterstock/videos/10879769/thumb/1.jpg"
-                   </img>
+        <img src="https://ak2.picdn.net/shutterstock/videos/33778132/thumb/1.jpg">
 
 
+        <li> Drumming </li>
+        <p> I started drumming when I was 12. I began to learn because there would be times when the drummer in our band couldn't make it so I began to learn and my cousin taught me. I love drumming it helps me relieve stress and gets me really HYPE! </p>
+        <img src="http://s3.amazonaws.com/pics.fandalism.com/267x267-EE003AF6-C8D3-4F17-9B4A742CAAADF582.jpg">
+        <li> Photography </li>
+        <p> I've always liked taking photos but I never really considered photography until I got my first camera. I have a Canon 6D that I bought myself 2 years ago and ever since i've always had an interest in photography. I like taking pictures of a variety of things whether it be people, places, or food. I mostly enjoy taking pictures of people and capturing moments. </p>
+        <img src="https://i.ytimg.com/vi/lzwu33UrV0U/maxresdefault.jpg">
+        <H2>Sports </H2>
+        <ol>
+            <li> Swimming </li>
+            <p> I started swimming my freshmen year in High School. At first it was very hard but I practiced everyday and eventually became really fast and I could hold my breath longer underwater. I swim often but not as much as I used to due to an allergic reaction I had to the chlorine in the water but hopefully in time I will swim again. My goal is to learn all the different strokes! </p>
+        </ol>
 
-          </HTML>
+        <img src="https://ak9.picdn.net/shutterstock/videos/10879769/thumb/1.jpg">
+
+
+
+
+    </ul>
+</Body>
+
+</HTML>
