--- a/background.html
+++ b/background.html
@@ -1,19 +1,18 @@
 <HTML>
   <HEAD>
-    <link rel="stylesheet" href="styles.css"
-    <TITLE>background.html</TITLE>
+    <link rel="stylesheet" href="styles.css">
  </HEAD>
+
     <BODY>
-        <nav class="menu">
-            <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="background.html">Background</a></li>
-                <li><a href="Interests.html">Interests</a></li>
-                <li><a href="favorites.html">Favorites</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
+       <nav class="menu">
+        <ul>
+            <li><a href="index2.html">Home</a></li>
+          <li><a href="background.html">Background</a>:My Background and My Family</li>
+          <li><a href="Interests.html">Interests</a>:A few things that interest me</li>
+            <li><a href="favorites.html">Favorites</a>:My favorite things </li>
+            <li><a href="schedule.html">Schedule</a>:My Schedule </li>
             </ul>
-        </nav>
-        <H1> FAMILY </H1>
+        </nav><H1> FAMILY </H1>
         <H2> OHANA </H2>
         <p> I have an amazing family. My parents names are Misael Rios and Magdalena De Leon. I love them so much! They came from guatemala and they hid in a corn field trynna escape la Migra !! I have two younger brothers their names are Dylan and Gael they are 8 and 7 years old. </p>
                 <h2> Traditions </h2>
@@ -28,8 +27,8 @@
 
 
 
-      </HTML>
-
+      </BODY>
+</HTML>
 
 
 
