--- a/favorites.html
+++ b/favorites.html
@@ -1,17 +1,17 @@
 <HTML>
   <HEAD>
     <TITLE>background.html</TITLE>
-    <link rel="stylesheet" href="styles.css">
-          <script src="script.js"></script>
-    </Head>
+    <link rel="stylesheet" href="favorites.css">
+    </HEAD>
+
     <Body>
       <nav class="menu">
         <ul>
-          <li><a href="Index.html">Home</a></li>
-          <li><a href="background.html">Background</a></li>
-          <li><a href="Interests.html">Interests</a></li>
-          <li><a href="favorites.html">Favorites</a></li>
-          <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="index2.html">Home</a></li>
+          <li><a href="background.html">Background</a>:My Background and My Family</li>
+          <li><a href="Interests.html">Interests</a>:A few things that interest me</li>
+            <li><a href="favorites.html">Favorites</a>:My favorite things </li>
+            <li><a href="schedule.html">Schedule</a>:My Schedule </li>
             </ul>
         </nav>
       <H1> My Favoritesss </H1>
@@ -19,34 +19,36 @@
        <ol>
          <li> Cake </li>
             <p> I love cake. It is one of my favorite foods ever. I'll eat any cake. </p>
-                    <img src= "https://images.pexels.com/photos/69817/france-confectionery-raspberry-cake-fruit-69817.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" </img>
+                    <img src= "https://images.pexels.com/photos/69817/france-confectionery-raspberry-cake-fruit-69817.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
          <li> Guatemalan Tacos </li>
             <p> My mother always makes the best Guatemalan tacos. When I come home from school I can always smell when she's making them. It gives me a really warm feeling inside. I love my mothers cooking! </p>
-                <img src= "https://i.pinimg.com/originals/54/70/28/547028efa4011005202da221301500e6.jpg" </img>
-         <li> Ham & Pineapple Pizza ! </li>
+                <img src= "https://i.pinimg.com/originals/54/70/28/547028efa4011005202da221301500e6.jpg">
+         <li> Ham and  Pineapple Pizza ! </li>
                 <p> Out of all the pizzas and different toppings and sauces there are, my favorite is ham and pineapple. There are a ton of people who think fruit does not belong on pizza but that is only because they have no TASTE BUDS!!! Ham and Pineapple is the BEST! </p>
-                        <img src= "https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/20/0/FNK_Gluten-Free-Pineapple-Ham-Pizza_s4x3.jpg.rend.hgtvcom.826.620.suffix/1483737097149.jpeg"</img>
+                        <img src= "https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/20/0/FNK_Gluten-Free-Pineapple-Ham-Pizza_s4x3.jpg.rend.hgtvcom.826.620.suffix/1483737097149.jpeg">
         </ol>
 
       <h2> Movies </h2>
       <ol>
         <li> Maleficent </li>
             <p> I've seen this movie over and over again because I love it that much. Maleficent is based on the origins of the Sleeping Beauty tale and shows how Maleficent came to be. It provides a different side and a movie towards the villain and changes the narrative that villains do get happy endings. </p>
-            <img src= "https://www.syfy.com/sites/syfy/files/styles/1200x680/public/2019/08/maleficent-via-disney.jpg" </img>
+            <img src= "https://www.syfy.com/sites/syfy/files/styles/1200x680/public/2019/08/maleficent-via-disney.jpg">
         <li> Casper </li>
                     <p> I love casper the friendly GHOST! I've watched this movie since I was like 10 years old and it is still amazing. </p>
-                <img src= "https://miro.medium.com/max/3242/1*6c0NEJHmrT6-2QQShEPfGQ.jpeg" </img>
+                <img src= "https://miro.medium.com/max/3242/1*6c0NEJHmrT6-2QQShEPfGQ.jpeg">
             </ol>
         <h2> Music </h2>
             <ol>
                 <li> No fun - Joji </li>
                         <p> I listen to this song almost everyday. The thing about me is that whenever I listen to something I never get tired of it. </p>
 
-                        <img src= "https://i.ytimg.com/vi/1FCShRV_p3Q/maxresdefault.jpg" </img>
+                        <img src= "https://i.ytimg.com/vi/1FCShRV_p3Q/maxresdefault.jpg">
                 <li> It's Always You - Ali </li>
                             <p> Whenever I feel down I often like listening to this song because it makes me feel better. </p>
-                        <img src= "https://i.ytimg.com/vi/X7G8PXND_9M/maxresdefault.jpg" </img>
+                        <img src= "https://i.ytimg.com/vi/X7G8PXND_9M/maxresdefault.jpg">
 
-        </HTML>
+        </ol>
+    </Body>
+</HTML>
 
 
