--- a/schedule.html
+++ b/schedule.html
@@ -1,57 +1,64 @@
 <HTML>
-  <HEAD>
+
+<HEAD>
     <TITLE>schedule.html</TITLE>
     <link rel="stylesheet" href="styles.css">
-          <script src="script.js"></script>
-    <body>
-      <nav class="menu">
+    <script src="script.js"></script>
+
+<body>
+    <nav class="menu">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Background</a></li>
-          <li><a href="#">Interests</a></li>
-          <li><a href="#">Favorites</a></li>
-          <li><a href="#">Schedule</a></li>
-      <h1> Schedule </h1>
-      <table border = "1">
+            <li><a href="index2.html">Home</a></li>
+            <li><a href="background.html">Background</a>:My Background and My Family</li>
+            <li><a href="Interests.html">Interests</a>:A few things that interest me</li>
+            <li><a href="favorites.html">Favorites</a>:My favorite things </li>
+            <li><a href="schedule.html">Schedule</a>:My Schedule </li>
+        </ul>
+    </nav>
+    <h1> Schedule </h1>
+    <table border="1">
         <caption> 2019-2020 School Year Schedule in Sequence </caption>
 
-    <thead>
-      <tr>
-        <th>Classes</th>
-        <th> Teachers </th>
-      </tr>
+        <thead>
+            <tr>
+                <th>Classes</th>
+                <th> Teachers </th>
+            </tr>
         </thead>
-    <tbody>
-        <tr>
+        <tbody>
+            <tr>
 
-            <td>AP English </td>
-            <td>Mr.Boris</td>
+                <td>AP English </td>
+                <td>Mr.Boris</td>
 
-        </tr>
-      <tr>
-        <td> AP U.S. History </td>
-        <td> Mr.Allen </td>
-      </tr>
-      <tr>
-        <td>AP Computer Science Principles </td>
-        <td> Mr.Temple </td>
-      </tr>
-      <tr>
-        <td> Algebra 2 </td>
-        <td> Mr.Pommier </td>
-      </tr>
-      <tr>
-        <td> AVID </td>
-        <td> Mrs.O'Neil </td>
-      </tr>
-      <tr>
-        <td> Physics </td>
-        <td> Mr.Casper </td>
-      </tr>
-                    <tr>
-                        <td> French 2 </td>
-                        <td> Madame Truett </td>
-                    </tr>
-                    </tbody>
-            </table>
+            </tr>
+            <tr>
+                <td> AP U.S. History </td>
+                <td> Mr.Allen </td>
+            </tr>
+            <tr>
+                <td>AP Computer Science Principles </td>
+                <td> Mr.Temple </td>
+            </tr>
+            <tr>
+                <td> Algebra 2 </td>
+                <td> Mr.Pommier </td>
+            </tr>
+            <tr>
+                <td> AVID </td>
+                <td> Mrs.O'Neil </td>
+            </tr>
+            <tr>
+                <td> Physics </td>
+                <td> Mr.Casper </td>
+            </tr>
+            <tr>
+                <td> French 2 </td>
+                <td> Madame Truett </td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+</HEAD>
 
+</HTML>
